# gp-opencv

./: .gitignore  README.md
opencv-poc/: CMakeLists.txt  OpenCVFilters.cpp  main.cpp
rmitgp/: CMakeLists.txt  README.txt
rmitgp/examples/bishopaj/: AddScalar.h  CVDebug.cpp  Convolve.cpp  Convolve.h  DownSample.cpp  ImageBrightness.cpp  ImageBrightness.h  ImageCase.cpp  ImageCase.h  ImageHue.cpp  ImageSaturation.cpp  ImageSaturation.h  LoggingNode.cpp  Makefile  Max.h  Mean.h  Min.cpp  Min.h  RandUnit.h  ReturnMat.cpp  ReturnUnit.cpp  ReturnUnit.h  Sigmoid.cpp  Stdev.cpp  SymbolicFitness.cpp  TFunction.h  TTerminal.h  Threshold.cpp  popen2.cpp
rmitgp/examples/max/: gen_latest.gen  maxgp  maxlog.txt
rmitgp/examples/symbolic/: Makefile.mpi  gen_latest.gen  run-log.txt
rmitgp/examples/symbolic2/: SymbolicFitness.cpp  main.cpp
rmitgp/examples/symbolic2MPI/: AddScalar.cpp  CVDebug.h  Crop.cpp  Crop.h  DownSample.h  ImageHue.h  Kernel3x3.cpp  Kernel3x3.h  LoggingNode.h  Max.cpp  Mean.cpp  MulScalar.cpp  MulScalar.h  RandDouble.cpp  RandUnit.cpp  ReturnMat.h  ReturnValue.h  Sigmoid.h  Stdev.h  SymbolicFitness.h  TTerminal.cpp  main.cpp  popen2.h  run.sh  symbolic2  symbols.h
rmitgp/src/: Makefile_MPI
