cmake_minimum_required(VERSION 3.1)
project(rmitgp)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    examples/symbolic3/DivideDouble.cpp
    examples/symbolic3/DivideDouble.h
    examples/symbolic3/GreaterThan.cpp
    examples/symbolic3/GreaterThan.h
    examples/symbolic3/If.cpp
    examples/symbolic3/If.h
    examples/symbolic3/LessThan.cpp
    examples/symbolic3/LessThan.h
    examples/symbolic3/main.cpp
    examples/symbolic3/Makefile
    examples/symbolic3/MinusDouble.cpp
    examples/symbolic3/MinusDouble.h
    examples/symbolic3/MultDouble.cpp
    examples/symbolic3/MultDouble.h
    examples/symbolic3/PlusDouble.cpp
    examples/symbolic3/PlusDouble.h
    examples/symbolic3/RandDouble.cpp
    examples/symbolic3/RandDouble.h
    examples/symbolic3/README.txt
    examples/symbolic3/ReturnBoolean.cpp
    examples/symbolic3/ReturnBoolean.h
    examples/symbolic3/ReturnDouble.cpp
    examples/symbolic3/ReturnDouble.h
    examples/symbolic3/SymbolicFitness.cpp
    examples/symbolic3/SymbolicFitness.h
    examples/symbolic3/XDouble.cpp
    examples/symbolic3/XDouble.h
    src/ADFProgramGenerator.cpp
    src/ADFProgramGenerator.h
    src/ADFRoot.cpp
    src/ADFRoot.h
    src/ADFunction.cpp
    src/ADFunction.h
    src/CoEvolutionFitness.cpp
    src/CoEvolutionFitness.h
    src/CoEvolutionPopulation.cpp
    src/CoEvolutionPopulation.h
    src/ConstantParsimony.cpp
    src/ConstantParsimony.h
    src/CovariantTarpeian.cpp
    src/CovariantTarpeian.h
    src/Crossover.cpp
    src/Crossover.h
    src/DynamicDepthLimit.cpp
    src/DynamicDepthLimit.h

    src/EMOPopulation.cpp
    src/EMOPopulation.h
    src/EMOTournamentSelection.cpp
    src/EMOTournamentSelection.h
    src/Fitness.cpp
    src/Fitness.h
    src/Function.cpp
    src/Function.h
    src/GeneticProgram.cpp
    src/GeneticProgram.h
    src/global.h
    src/GPConfig.cpp
    src/GPConfig.h
    src/GridPopulation.cpp
    src/GridPopulation.h
    src/LimitParsimony.cpp
    src/LimitParsimony.h
    src/LinearParsimony.cpp
    src/LinearParsimony.h
    src/list.cpp
    src/list.h
    src/Makefile
    src/Makefile_MPI
    src/Mutation.cpp
    src/Mutation.h
    src/Node.cpp
    src/Node.h
    src/NodeSet.cpp
    src/NodeSet.h
    src/NodeVector.cpp
    src/NodeVector.h
    src/NSGA2.cpp
    src/NSGA2.h
    src/Parsimony.cpp
    src/Parsimony.h
    src/Population.cpp
    src/Population.h
    src/ProgramGenerator.cpp
    src/ProgramGenerator.h
    src/rand.h
    src/Random.cpp
    src/Random.h
    src/readme.txt
    src/ReturnData.cpp
    src/ReturnData.h
    src/Selection.cpp
    src/Selection.h
    src/SinParsimony.cpp
    src/SinParsimony.h
    src/tags
    src/Terminal.cpp
    src/Terminal.h
    src/TournamentSelection.cpp
    src/TournamentSelection.h
    src/Util.cpp
    src/Util.h)

include_directories(src)

add_executable(rmitgpcv ${SOURCE_FILES})